addon/styles/mx-ui-components.css
.mox-theme-switch input {
  height: 1.5rem;
  width: 2.5rem;
  outline: 2px solid #e5e7eb; /* bg-gray-200 */
  background-color: #e5e7eb; /* bg-gray-200 */
  outline-offset: 0;
  border: none;
}

.mox-toggle input {
  height: 1.3rem;
  width: 2.6rem;
}

.mox-theme-switch input:checked,
.mox-toggle input:checked,
.mxa-toggle input:checked {
  background-image: none;
}

.mox-theme-switch input::after,
.mox-toggle input::after,
.mxa-toggle input::after {
  content: '';
  height: 20px;
  width: 20px;
  position: absolute;
  left: 1px;
  right: auto;
  display: block;
  border-radius: 1rem;
  outline: none;
  transform: translateX(0);
  transition: transform 0.15s;
  transition-timing-function: ease-in-out;
}

.mox-theme-switch input::after,
.mxa-toggle input::after {
  background-color: #fff;
}

.mox-toggle input::after {
  height: 15px;
  width: 15px;
  top: 2px;
  left: 2px;
}

.mxa-toggle input::after {
  height: 20px;
  width: 20px;
  top: 1px;
}

.mox-theme-switch input:checked {
  background-color: #1f2937; /* bg-gray-800 */
  outline: 2px solid #1f2937; /* bg-gray-800 */
  color: #1f2937; /* bg-gray-800 */
}

.mox-theme-switch input:focus {
  outline: 2px solid #06b6d4;
  box-shadow: none;
  outline-offset: 0;
}

.mox-theme-switch input::after {
  height: 18px;
  width: 18px;
  top: 3px;
  left: 3px;
}

.mox-theme-switch-icon {
  position: absolute;
  left: -4px;
  top: 4px;
  right: auto;
  display: block;
  outline: none;
  transform: translateX(0);
  transition: transform 0.15s;
  transition-timing-function: ease-in-out;
}

.mox-theme-switch input:checked::after,
.mox-theme-switch-icon.is-checked {
  transform: translateX(15px);
  background-color: #fff;
}

.mox-theme-switch input:checked::after {
  background-color: transparent;
}

.mox-toggle input:checked::after,
.mxa-toggle input:checked::after {
  transform: translateX(20px);
}

.mxa-toggle input:checked::after {
  background-color: #fff;
}

.mox-label,
.mxa-label {
  display: flex;
  margin-bottom: 0.15rem;
  align-items: center;
  font-weight: 500;
}

.mox-label.required::after,
.mxa-label.required::after {
  content: '';
  display: block;
  width: 4px;
  height: 4px;
  position: relative;
  border-radius: 4px;
  margin-left: 0.2rem;
}

.mox-label.required::after {
  background-color: #ef4444; /* red-500 */
}

.mxa-label.required::after {
  background-color: #c2410c; /* orange-700 */
}

.mxa-sidebar-item a.active {
  color: #333741;
}

.mxa-sidebar-item a.active::before {
  content: '';
  display: block;
  width: 15px;
  height: 7px;
  left: 0;
  background-color: transparent;
  position: absolute;
  margin-left: 0.1rem;
  border-top: 6px solid transparent;
  border-left: 6px solid #333741;
  border-bottom: 6px solid transparent;
}

.mxa-sidebar-item .is-home.active::before {
  display: none;
}

a.mox-tab-link {
  padding: 1rem 0.5rem;
  border-style: solid;
  border-bottom-width: 2px;
  border-bottom-color: transparent; /* transparent */
}

a.active.mox-tab-link,
a.arg-active.mox-tab-link,
a.active.mox-tab-link:hover,
a.arg-active.mox-tab-link:hover {
  color: #06b6d4; /* cyan-500 */
  border-bottom-color: #06b6d4; /* cyan-500 */
  font-weight: 700; /* font-bold */
  border-style: solid;
}

a.active.mox-link-button,
a.active.mox-link-button:hover {
  background-color: #d1d5db; /* gray-300 */
  color: #1f2937; /* gray-800 */
}

.dark a.active.mox-link-button,
.dark a.active.mox-link-button:hover,
.dark a.mox-link-button:hover {
  background-color: #374151; /* gray-700 */
  color: #fff; /* white */
}

